<resources>
    <string name="app_name">RegisterLoginDemo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an Account?\nRegister here.</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="already_registered_login_here">Already Registered?\nLogin here.</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
</resources>